--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@mui/styles": "^6.2.1",
     "@mui/system": "^6.2.1",
@@ -14,6 +15,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "react": "18",
     "react-dom": "18",
     "react-file-base64": "^1.0.3",
