--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "18",
     "react-dom": "18",
     "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
