--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "18",
     "react-dom": "18",
